tests/array-exprs-err.chg.stderr


    let x = [1, "a"];
                ^^^  type error: str* is not assignable to {{integer}}
